[-] Update API response model
